# node-modules-cleaner

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/session-logs/: 2026-01-29T02:30:57+01:00_29bf44ae-7b5c-46d5-9e2d-5842f00694d4_session-summary.md  latest-session-summary.md
.github/workflows/: release.yml
fastlane/: Matchfile
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: ConfirmDialog.tsx  FolderList.tsx  SizeDisplay.tsx  SortControls.tsx
src/hooks/: useNodeModules.ts
