[package]
name = "node-modules-cleaner"
version = "1.0.1"
description = "A cross-platform desktop app to scan and clean node_modules folders"
authors = ["Bartłomiej Zimny"]
license = "MIT"
repository = "https://github.com/jash90/node-modules-cleaner"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
